# agentskills-mcp

./: .gitignore  README.md  pyproject.toml  repos.example.json
.codex/: AGENTS.md
.codex/skills/project-setup/: SKILL.md
.github/workflows/: publish.yml
src/github_skills_mcp/: __init__.py  server.py
