[project]
name = "agentskills-mcp"
version = "0.1.0"
description = "MCP server for discovering, reading, and installing agent skills from curated GitHub repositories."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Pink Pixel" }
]
keywords = ["mcp", "agent", "skills", "github", "fastmcp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "mcp[cli]>=1.0.0",
  "pydantic>=2.7.0",
]

[project.scripts]
agentskills-mcp = "github_skills_mcp.server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
